Added high energy artifacts table, paper plots are in 13_meta.

--- a/appaloosa/13B_highenergy_inspect.ipynb
+++ b/appaloosa/13B_highenergy_inspect.ipynb
@@ -95,17 +95,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3000.0_7000.0_FFD.csv\n",
-      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3000.0_3249.0_FFD.csv\n",
-      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3250.0_3499.0_FFD.csv\n",
-      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3500.0_3749.0_FFD.csv\n",
-      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3750.0_4000.0_FFD.csv\n",
       "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_M44_3000.0_7000.0_FFD.csv\n",
       "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_M44_3000.0_3249.0_FFD.csv\n",
       "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_M44_3250.0_3499.0_FFD.csv\n",
       "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_M44_3500.0_3749.0_FFD.csv\n",
       "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_M44_3750.0_4000.0_FFD.csv\n",
-      "(1276, 11)\n"
+      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3000.0_7000.0_FFD.csv\n",
+      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3000.0_3249.0_FFD.csv\n",
+      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3250.0_3499.0_FFD.csv\n",
+      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3500.0_3749.0_FFD.csv\n",
+      "/work1/eilin/appaloosa/appaloosa/stars_shortlist/share/run_06_Pleiades_3750.0_4000.0_FFD.csv\n",
+      "(1258, 11)\n"
      ]
     },
     {
@@ -226,113 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/eilin/.local/lib/python3.4/site-packages/pandas/core/indexing.py:1198: FutureWarning: slice indexers when using iloc should be integers and not floating point\n",
       "  return self._getitem_axis(key, axis=0)\n",
-      "/usr/lib/python3.4/site-packages/ipykernel_launcher.py:33: FutureWarning: scalar indexers for index type Int64Index should be integers and not floating point\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "9\n",
-      "2\n",
-      "32\n",
-      "4\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "2\n",
-      "5\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "2\n",
-      "6\n",
-      "2\n",
-      "4\n",
-      "1\n",
-      "2\n",
-      "11\n",
-      "2\n",
-      "5\n",
-      "5\n",
-      "3\n",
-      "9\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "10\n",
-      "6\n",
-      "6\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "2\n",
-      "6\n",
-      "5\n",
-      "2\n",
-      "3\n",
-      "8\n",
-      "2\n",
-      "5\n",
-      "2\n",
-      "4\n",
-      "1\n",
-      "1\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "5\n",
-      "7\n",
-      "12\n",
-      "2\n",
-      "2\n",
-      "4\n",
-      "9\n",
-      "4\n",
-      "8\n",
-      "7\n",
-      "1\n",
-      "3\n",
-      "3\n",
-      "9\n",
-      "4\n",
-      "7\n",
-      "3\n",
-      "8\n",
-      "4\n",
-      "3\n",
-      "8\n",
-      "3\n",
-      "4\n",
-      "2\n",
-      "2\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "9\n",
-      "2\n",
-      "5\n"
+      "/usr/lib/python3.4/site-packages/ipykernel_launcher.py:32: FutureWarning: scalar indexers for index type Int64Index should be integers and not floating point\n"
      ]
     }
    ],
@@ -390,29 +295,16 @@
     "\n",
     "for cluster in ['M44','Pleiades']:\n",
     "    \n",
-    "    flarelist = list(set(df[df.energ_true>1e33].EPIC.tolist()))\n",
+    "    flarelist = list(set(df[df.energ_true>3.1622776601683793e34].EPIC.tolist()))\n",
     "    for i in flarelist:\n",
     "        print_susp(i,cluster, test)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "83"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(flarelist)\n"
+    "## Create table for paper"
    ]
   },
   {
@@ -422,8 +314,338 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>istart</th>\n",
+       "      <th>istop</th>\n",
+       "      <th>flaredropwhy</th>\n",
+       "      <th>checkTPFifflare</th>\n",
+       "      <th>note</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPIC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>210978953</th>\n",
+       "      <td>2872</td>\n",
+       "      <td>2886</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211021098</th>\n",
+       "      <td>3074</td>\n",
+       "      <td>3075</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211024798</th>\n",
+       "      <td>1034</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>short</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211038389</th>\n",
+       "      <td>1104</td>\n",
+       "      <td>1115</td>\n",
+       "      <td>noise</td>\n",
+       "      <td>0</td>\n",
+       "      <td>whole CCD flashes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211038389</th>\n",
+       "      <td>1124</td>\n",
+       "      <td>1132</td>\n",
+       "      <td>noise</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no flares in LC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211060530</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>allartifacts</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bright CCD row</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211063744</th>\n",
+       "      <td>3086</td>\n",
+       "      <td>3087</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211066337</th>\n",
+       "      <td>2450</td>\n",
+       "      <td>2453</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211066337</th>\n",
+       "      <td>397</td>\n",
+       "      <td>399</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211078145</th>\n",
+       "      <td>517</td>\n",
+       "      <td>519</td>\n",
+       "      <td>short</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211079332</th>\n",
+       "      <td>1202</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>short</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211089323</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>allartifacts</td>\n",
+       "      <td>0</td>\n",
+       "      <td>saturated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211091848</th>\n",
+       "      <td>697</td>\n",
+       "      <td>699</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211096368</th>\n",
+       "      <td>2233</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>noise</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bright CCD row</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211107439</th>\n",
+       "      <td>3169</td>\n",
+       "      <td>3180</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211114329</th>\n",
+       "      <td>2044</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211115638</th>\n",
+       "      <td>708</td>\n",
+       "      <td>710</td>\n",
+       "      <td>short</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211120842</th>\n",
+       "      <td>717</td>\n",
+       "      <td>719</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>dropout CCD row</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211151674</th>\n",
+       "      <td>2591</td>\n",
+       "      <td>2603</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211909748</th>\n",
+       "      <td>544</td>\n",
+       "      <td>546</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>flagged cadences</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211916505</th>\n",
+       "      <td>2285</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211936906</th>\n",
+       "      <td>1417</td>\n",
+       "      <td>1421</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>funny transit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211955036</th>\n",
+       "      <td>1536</td>\n",
+       "      <td>1537</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>saturated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211955036</th>\n",
+       "      <td>1545</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>saturated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211972627</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>allartifacts</td>\n",
+       "      <td>0</td>\n",
+       "      <td>broken pixel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211975426</th>\n",
+       "      <td>1197</td>\n",
+       "      <td>1199</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>funny transit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212034371</th>\n",
+       "      <td>458</td>\n",
+       "      <td>460</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212034371</th>\n",
+       "      <td>1531</td>\n",
+       "      <td>1534</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>contamination</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212034371</th>\n",
+       "      <td>1797</td>\n",
+       "      <td>1799</td>\n",
+       "      <td>short</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No brightening visible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210966700</th>\n",
+       "      <td>1444</td>\n",
+       "      <td>1447</td>\n",
+       "      <td>artifact</td>\n",
+       "      <td>0</td>\n",
+       "      <td>flagged cadences</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(110, 17)"
+       "           istart  istop  flaredropwhy  checkTPFifflare  \\\n",
+       "EPIC                                                      \n",
+       "210978953    2872   2886      artifact                1   \n",
+       "211021098    3074   3075      artifact                1   \n",
+       "211024798    1034   1035         short                1   \n",
+       "211038389    1104   1115         noise                0   \n",
+       "211038389    1124   1132         noise                0   \n",
+       "211060530     NaN    NaN  allartifacts                0   \n",
+       "211063744    3086   3087      artifact                1   \n",
+       "211066337    2450   2453      artifact                0   \n",
+       "211066337     397    399      artifact                0   \n",
+       "211078145     517    519         short                1   \n",
+       "211079332    1202   1204         short                1   \n",
+       "211089323     NaN    NaN  allartifacts                0   \n",
+       "211091848     697    699      artifact                0   \n",
+       "211096368    2233   2237         noise                0   \n",
+       "211107439    3169   3180      artifact                1   \n",
+       "211114329    2044   2046         short                0   \n",
+       "211115638     708    710         short                1   \n",
+       "211120842     717    719         short                0   \n",
+       "211151674    2591   2603      artifact                1   \n",
+       "211909748     544    546         short                0   \n",
+       "211916505    2285   2290      artifact                1   \n",
+       "211936906    1417   1421      artifact                0   \n",
+       "211955036    1536   1537      artifact                0   \n",
+       "211955036    1545   1551      artifact                0   \n",
+       "211972627     NaN    NaN  allartifacts                0   \n",
+       "211975426    1197   1199         short                0   \n",
+       "212034371     458    460      artifact                0   \n",
+       "212034371    1531   1534         short                0   \n",
+       "212034371    1797   1799         short                0   \n",
+       "210966700    1444   1447      artifact                0   \n",
+       "\n",
+       "                             note  \n",
+       "EPIC                               \n",
+       "210978953                     NaN  \n",
+       "211021098                     NaN  \n",
+       "211024798                     NaN  \n",
+       "211038389       whole CCD flashes  \n",
+       "211038389         no flares in LC  \n",
+       "211060530          Bright CCD row  \n",
+       "211063744                     NaN  \n",
+       "211066337  No brightening visible  \n",
+       "211066337  No brightening visible  \n",
+       "211078145                     NaN  \n",
+       "211079332                     NaN  \n",
+       "211089323               saturated  \n",
+       "211091848  No brightening visible  \n",
+       "211096368          Bright CCD row  \n",
+       "211107439                     NaN  \n",
+       "211114329  No brightening visible  \n",
+       "211115638                     NaN  \n",
+       "211120842         dropout CCD row  \n",
+       "211151674                     NaN  \n",
+       "211909748        flagged cadences  \n",
+       "211916505                     NaN  \n",
+       "211936906           funny transit  \n",
+       "211955036               saturated  \n",
+       "211955036               saturated  \n",
+       "211972627            broken pixel  \n",
+       "211975426           funny transit  \n",
+       "212034371  No brightening visible  \n",
+       "212034371           contamination  \n",
+       "212034371  No brightening visible  \n",
+       "210966700        flagged cadences  "
       ]
      },
      "execution_count": 7,
@@ -432,7 +654,14 @@
     }
    ],
    "source": [
-    "df[df.energ_true>1e33].shape"
+    "art = pd.read_csv('stars_shortlist/share/High_Energy_Flares/DropHighEnergy.csv')\n",
+    "#art.set_index('EPIC')\n",
+    "\n",
+    "hdu = fits.open('stars_shortlist/{}/hlsp_k2sc_k2_llc_{}-c0{}_kepler_v2_lc.fits')\n",
+    "data_rec = hdu[1].data\n",
+    "lc = pd.DataFrame({'time':np.array(data_rec['time']).byteswap().newbyteorder(),\n",
+    "art\n",
+    "art.rename(index=int,columns={'istart':'t_0','istart':'t_f'}"
    ]
   },
   {
